config: firebase auth

--- a/tucano-app/app/src/main/res/layout/activity_login.xml
+++ b/tucano-app/app/src/main/res/layout/activity_login.xml
@@ -93,6 +93,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_50sdp"
             android:layout_marginHorizontal="@dimen/_30sdp"
