--- a/tucano-app/app/src/main/res/layout/activity_login.xml
+++ b/tucano-app/app/src/main/res/layout/activity_login.xml
@@ -23,15 +23,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="@dimen/_20sdp"
-            android:backgroundTint="#ffa500">
+            android:layout_marginBottom="@dimen/_20sdp">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_android_black_24dp"
-                android:layout_marginBottom="@dimen/_15sdp"
-                app:tint="@color/white" />
+                android:src="@mipmap/round_icon"
+                 />
 
         </com.google.android.material.card.MaterialCardView>
 
